--- a/css/contact.css
+++ b/css/contact.css
@@ -20,22 +20,14 @@ header {
     top:0;
     left: 408px;
     display: inline;
-
 }
-/** I cant get the "Your Name" and "nav" elements to properly align **/
+
 a {
     color: #cccccc;
     position: relative;
     top: 0;
     left: 900px;
-}    
-
-#main-image {
-     float: left;   
-     margin-right: 5px; 
-}
-    
-
+} 
 
 .wrapper {
     font-family: Arial, Helvetica, sans-serif;
@@ -62,17 +54,35 @@ h2 {
     font-family: 'Georgia', Times, Times, serif;
 }
 
-.pic {
-    margin-left: 20px
-}
-
 p {
     font-family: Arial, Helvetica, sans-serif;
     color: #777777;
-    margin: 20px;
-    line-height: 25px;
+    margin: 12px;
+    line-height: 8px;
+    font-weight: bold
 }
-/** I cant get the paragraph to wrap the photo**/
+#name{
+    padding-left: 5px;
+}
+
+#email{
+    padding-left: 5px;
+}
+
+#message{
+    padding-left: 5px;
+}
+
+#submit {
+    background: #4aaaa5;
+    color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border: 10px, color #4aaaa5;
+}
+
 footer {
     background: #777777;
     color: white;
