--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -20,22 +20,14 @@ header {
     top:0;
     left: 408px;
     display: inline;
-
 }
-/** I cant get the "Your Name" and "nav" elements to properly align **/
+
 a {
     color: #cccccc;
     position: relative;
     top: 0;
     left: 900px;
-}    
-
-#main-image {
-     float: left;   
-     margin-right: 5px; 
-}
-    
-
+} 
 
 .wrapper {
     font-family: Arial, Helvetica, sans-serif;
@@ -63,16 +55,19 @@ h2 {
 }
 
 .pic {
-    margin-left: 20px
+
 }
 
 p {
-    font-family: Arial, Helvetica, sans-serif;
-    color: #777777;
-    margin: 20px;
-    line-height: 25px;
+    background: #4aaaa5;
+    color: white;
+    width: 150px;
+    padding: 10px;
 }
-/** I cant get the paragraph to wrap the photo**/
+
+/** I am horrible at positioning and floats >:s **/
+
+
 footer {
     background: #777777;
     color: white;
